
[package]
name = "async_https_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-native-tls = "0.5.0"
async-std = { version = "1.12.0", features = ["attributes"] }
futures = "0.3.30"
local-ip-address = "0.6.1"
sscanf = "0.4.1"

